Bug 163128 - krichtextedit selecting text problem
Summary: krichtextedit selecting text problem
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Stephen Kelly
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-03 13:39 UTC by FiNeX
Modified: 2008-06-08 13:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2008-06-03 13:39:09 UTC
Version:            (using Devel)
Installed from:    Compiled sources

From bug #163124:

selecting by dragging the mouse is odd.  When I click somewhere and drag the mouse to *outside* the widget where I release the button and I then move the mouse back into the widget the selection is altered after the mouse-release.
Comment 1 Stephen Kelly 2008-06-05 03:06:01 UTC
I can confirm this on the krichtexteditor in kdeui/tests, so this is a krichtextedit bug. It's a side-effect of the way I implemented format painting in the widget. I suspect I'll need to handle another event or two in the widget, but I'll look into it by the weekend.
Comment 2 Stephen Kelly 2008-06-08 13:57:30 UTC
SVN commit 818348 by skelly:

Remove the selectionFinished signal from the KRichTextEdit. 
It had been used as part of implementing text format painting.
Now that is implemented in the mouseReleaseEvent of the KRichTextWidget.

BUG: 163128
BUG: 163124



 M  +0 -6      krichtextedit.cpp  
 M  +0 -6      krichtextedit.h  
 M  +11 -13    krichtextwidget.cpp  
 M  +8 -1      krichtextwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=818348