Remove the selectionFinished signal from the KRichTextEdit. It had been used as part of implementing text format painting. Now that is implemented in the mouseReleaseEvent of the KRichTextWidget.

BUG: 163128
BUG: 163124


svn path=/trunk/KDE/kdelibs/; revision=818348